--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ html {
 .center {
   width: 28px;
   transform: translateX(-50%) translateY(-50%);
-  position: absolute;;
+  position: absolute;
   left: 50%;
   top: 50%;
 }
